// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Blockquote styling should render a quote center aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}


<blockquote data-testid="blockquote" class="a b c d e f">
  <p>
    Remember to look up at the stars and not down at your feet. Try to make
    sense of what you see and wonder about what makes the universe exist. Be
    curious. And however difficult life may seem, there is always something you
    can do and succeed at.
  </p>
</blockquote>
;
"
`;

exports[`components/Blockquote styling should render a quote left aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}


<blockquote data-testid="blockquote" class="a b c d e f">
  <p>
    Remember to look up at the stars and not down at your feet. Try to make
    sense of what you see and wonder about what makes the universe exist. Be
    curious. And however difficult life may seem, there is always something you
    can do and succeed at.
  </p>
</blockquote>
;
"
`;

exports[`components/Blockquote styling should render a quote right aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}


<blockquote data-testid="blockquote" class="a b c d e f">
  <p>
    Remember to look up at the stars and not down at your feet. Try to make
    sense of what you see and wonder about what makes the universe exist. Be
    curious. And however difficult life may seem, there is always something you
    can do and succeed at.
  </p>
</blockquote>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution and source 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: left;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
    <cite data-testid="blockquote-source" title="Reith Lecture (BBC)"
      >Reith Lecture (BBC)</cite
    >
  </figcaption>
</figure>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution and source 2`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: center;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
    <cite data-testid="blockquote-source" title="Reith Lecture (BBC)"
      >Reith Lecture (BBC)</cite
    >
  </figcaption>
</figure>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution and source 3`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: right;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
    <cite data-testid="blockquote-source" title="Reith Lecture (BBC)"
      >Reith Lecture (BBC)</cite
    >
  </figcaption>
</figure>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution center aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: center;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
  </figcaption>
</figure>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution left aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: left;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
  </figcaption>
</figure>
;
"
`;

exports[`components/Blockquote styling should render a quote with attribution right aligned 1`] = `
".a {
  margin-bottom: 1rem;
}
.b {
  font-size: 1.25rem;
}
.c > :last-child {
  margin-bottom: 0;
}
.d {
  margin-top: 0;
}
.e {
  margin-right: 0;
}
.f {
  margin-left: 0;
}
.g {
  text-align: right;
}
.h {
  margin-top: -1rem;
}
.i {
  font-size: 0.875em;
}
.j {
  color: #6c757d;
}
.k::before {
  content: "- ";
}


<figure data-testid="blockquote-figure" class="g">
  <blockquote data-testid="blockquote" class="a b c d e f">
    <p data-testid="blockquote-text">
      Remember to look up at the stars and not down at your feet. Try to make
      sense of what you see and wonder about what makes the universe exist. Be
      curious. And however difficult life may seem, there is always something
      you can do and succeed at.
    </p>
  </blockquote>
  <figcaption data-testid="blockquote-attribution" class="a h i j k">
    Stephen Hawking
  </figcaption>
</figure>
;
"
`;
